Responsive images, 'How' section, and mobile hero updates
- Add scripts/generate_images.sh: IM6/IM7 support, src/out and sections, AVIF flags (--no-avif/--avif), --force, cwebp/avifenc fallbacks
- Add scripts/README.md with prerequisites, usage, flags, and troubleshooting
- index.html: use srcset/sizes for What carousel and Gallery; switch How step images to assets/photos/how; split step text into 3 lines with emphasis; add subtle CTAs (Our favourite songs, Get your photos)
- landing.css: brighten + subtly blur How photos; moderate taller step min-heights; crop middle step to left (object-position); larger step titles/text; three-line layout styles; subtle .btn-subtle style and bottom-aligned CTAs
- Mobile (<=560px) hero: bigger logo and subtitle; smaller CTA buttons
- BACKLOG.md: mark responsive images backlog as completed with usage notes

--- a/index.html
+++ b/index.html
@@ -67,11 +67,31 @@
         <div class="what-hero">
           <div class="carousel" id="what-carousel" aria-label="What it is photos">
             <div class="track" role="region" aria-roledescription="carousel" aria-label="Photo carousel">
-              <figure class="slide"><img src="assets/photos/what/ADC_129.webp" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/ADC_146.webp" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/ADC_152.webp" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/ADC_1506.webp" alt="" loading="lazy"></figure>
-              <figure class="slide"><img src="assets/photos/what/ADC_201.webp" alt="" loading="lazy"></figure>
+              <figure class="slide"><img
+                src="assets/photos/what/ADC_129-1200.webp"
+                srcset="assets/photos/what/ADC_129-800.webp 800w, assets/photos/what/ADC_129-1200.webp 1200w, assets/photos/what/ADC_129-1600.webp 1600w"
+                sizes="100vw"
+                alt="" loading="lazy" decoding="async"></figure>
+              <figure class="slide"><img
+                src="assets/photos/what/ADC_146-1200.webp"
+                srcset="assets/photos/what/ADC_146-800.webp 800w, assets/photos/what/ADC_146-1200.webp 1200w, assets/photos/what/ADC_146-1600.webp 1600w"
+                sizes="100vw"
+                alt="" loading="lazy" decoding="async"></figure>
+              <figure class="slide"><img
+                src="assets/photos/what/ADC_152-1200.webp"
+                srcset="assets/photos/what/ADC_152-800.webp 800w, assets/photos/what/ADC_152-1200.webp 1200w, assets/photos/what/ADC_152-1600.webp 1600w"
+                sizes="100vw"
+                alt="" loading="lazy" decoding="async"></figure>
+              <figure class="slide"><img
+                src="assets/photos/what/ADC_1506-1200.webp"
+                srcset="assets/photos/what/ADC_1506-800.webp 800w, assets/photos/what/ADC_1506-1200.webp 1200w, assets/photos/what/ADC_1506-1600.webp 1600w"
+                sizes="100vw"
+                alt="" loading="lazy" decoding="async"></figure>
+              <figure class="slide"><img
+                src="assets/photos/what/ADC_201-1200.webp"
+                srcset="assets/photos/what/ADC_201-800.webp 800w, assets/photos/what/ADC_201-1200.webp 1200w, assets/photos/what/ADC_201-1600.webp 1600w"
+                sizes="100vw"
+                alt="" loading="lazy" decoding="async"></figure>
             </div>
             <!-- dots removed intentionally -->
           </div>
@@ -94,21 +114,45 @@
         <h2 id="how-title" class="h2">Get Ready<br>To Jump on Stage.</h2>
         <div class="steps">
   <div class="step reveal delay-1" data-bg="choose">
-    <img class="step-bg" src="assets/step-choose.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_2427.webp';" />
+    <img class="step-bg"
+         src="assets/photos/how/step-choose-1200.webp"
+         srcset="assets/photos/how/step-choose-800.webp 800w, assets/photos/how/step-choose-1200.webp 1200w, assets/photos/how/step-choose-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" aria-hidden="true" loading="lazy" decoding="async" />
     <b>1) Pick your song</b>
-    <p>From timeless classics to today’s hits — the stage is yours.</p>
-    <!-- <div class="step-cta"><a class="btn" href="#" aria-label="Browse our song list">BROWSE OUR SONG LIST</a></div> -->
+    <p class="step-lines">
+      <span>From timeless classics</span>
+      <span>to today’s hits —</span>
+      <span><strong>the stage is yours</strong>.</span>
+    </p>
+    <div class="step-cta"><a class="btn-subtle" href="https://songlist.livekaraokeparis.com" target="_blank" rel="noopener noreferrer" aria-label="Browse our favourite songs">Our favourite songs</a></div>
   </div>
   <div class="step reveal delay-2" data-bg="band">
-    <img class="step-bg" src="assets/step-band.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_1506.webp';" />
+    <img class="step-bg"
+         src="assets/photos/how/step-band-1200.webp"
+         srcset="assets/photos/how/step-band-800.webp 800w, assets/photos/how/step-band-1200.webp 1200w, assets/photos/how/step-band-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" aria-hidden="true" loading="lazy" decoding="async" />
     <b>2) Join the band</b>
-    <p>We got your back. Grab the mic, we handle the rest.</p>
+    <p class="step-lines">
+      <span>We got your back.</span>
+      <span><strong>Grab the mic</strong>,</span>
+      <span><strong>we handle the rest</strong>.</span>
+    </p>
   </div>
   <div class="step reveal delay-3" data-bg="perform">
-    <img class="step-bg" src="assets/step-perform.jpg" alt="" aria-hidden="true" onerror="this.onerror=null; this.src='assets/photos/gallery/ADC_1370.webp';" />
+    <img class="step-bg"
+         src="assets/photos/how/step-perform-1200.webp"
+         srcset="assets/photos/how/step-perform-800.webp 800w, assets/photos/how/step-perform-1200.webp 1200w, assets/photos/how/step-perform-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" aria-hidden="true" loading="lazy" decoding="async" />
     <b>3) Make it unforgettable</b>
-    <p>Lights, cheers, and every epic moment captured by our photographer.</p>
-    <!-- <div class="step-cta"><a class="btn" href="#photos" aria-label="Go to photo gallery">GET YOUR PHOTOS</a></div> -->
+    <p class="step-lines">
+      <span>Lights, cheers, and</span>
+      <span><strong>every epic moment</strong></span>
+      <span>captured by our photographer.</span>
+    </p>
+    <div class="step-cta"><a class="btn-subtle" href="https://www.instagram.com/alexcarmichaelphotography" target="_blank" rel="noopener noreferrer" aria-label="See our photos on Instagram">Get your photos</a></div>
   </div>
 </div>
 </div>
@@ -121,31 +165,58 @@
         <h2 id="photos-title" class="h2">Our Show,<br>Your Spotlight</h2>
         <div class="gallery" role="list">
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/ADC_1370.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_1370-1200.webp"
+         srcset="assets/photos/gallery/ADC_1370-800.webp 800w, assets/photos/gallery/ADC_1370-1200.webp 1200w, assets/photos/gallery/ADC_1370-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/ADC_1405.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_1405-1200.webp"
+         srcset="assets/photos/gallery/ADC_1405-800.webp 800w, assets/photos/gallery/ADC_1405-1200.webp 1200w, assets/photos/gallery/ADC_1405-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/ADC_1448.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_1448-1200.webp"
+         srcset="assets/photos/gallery/ADC_1448-800.webp 800w, assets/photos/gallery/ADC_1448-1200.webp 1200w, assets/photos/gallery/ADC_1448-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/ADC_1530.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_1530-1200.webp"
+         srcset="assets/photos/gallery/ADC_1530-800.webp 800w, assets/photos/gallery/ADC_1530-1200.webp 1200w, assets/photos/gallery/ADC_1530-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/ADC_2400.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_2400-1200.webp"
+         srcset="assets/photos/gallery/ADC_2400-800.webp 800w, assets/photos/gallery/ADC_2400-1200.webp 1200w, assets/photos/gallery/ADC_2400-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/ADC_2427.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_2427-1200.webp"
+         srcset="assets/photos/gallery/ADC_2427-800.webp 800w, assets/photos/gallery/ADC_2427-1200.webp 1200w, assets/photos/gallery/ADC_2427-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal" role="listitem">
-    <img src="assets/photos/gallery/ADC_2579.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_2579-1200.webp"
+         srcset="assets/photos/gallery/ADC_2579-800.webp 800w, assets/photos/gallery/ADC_2579-1200.webp 1200w, assets/photos/gallery/ADC_2579-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-1" role="listitem">
-    <img src="assets/photos/gallery/ADC_39.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/ADC_39-1200.webp"
+         srcset="assets/photos/gallery/ADC_39-800.webp 800w, assets/photos/gallery/ADC_39-1200.webp 1200w, assets/photos/gallery/ADC_39-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
   <figure class="reveal delay-2" role="listitem">
-    <img src="assets/photos/gallery/photo06.webp" alt="" loading="lazy" />
+    <img src="assets/photos/gallery/photo06-1200.webp"
+         srcset="assets/photos/gallery/photo06-800.webp 800w, assets/photos/gallery/photo06-1200.webp 1200w, assets/photos/gallery/photo06-1600.webp 1600w"
+         sizes="(min-width: 900px) 33vw, (min-width: 560px) 50vw, 100vw"
+         alt="" loading="lazy" decoding="async" />
   </figure>
 </div>
 </div>
