Updated hero subtitle

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>
           <img class="logo-img" src="assets/logo-full.svg" alt="Live Karaoke Paris" />
         </h1>
-        <p class="subtitle">Are You Ready to Outshine The City of Light?</p>
+        <p class="subtitle">Paris Got a Brand New Star</p>
         <div class="hero-cta" role="group" aria-label="Primary actions">
           <a class="btn" href="#what">What it is</a>
           <a class="btn" href="#photos">See photos</a>
