Updated text for the contact section

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <h2 id="what-title" class="h2 neon-text">The Karaoke You Love.<br>Reinvented for the Stage.</h2>
 
         <div class="what-hero">
-          <video class="bg-video" autoplay muted loop playsinline preload="auto" aria-hidden="true"
-                 poster="assets/photos/what/ADC_129-1200.webp">
+          <video class="bg-video" autoplay muted loop playsinline webkit-playsinline preload="auto" aria-hidden="true" poster="assets/videos/what/what-loop-1200.jpg">
             <!-- WebM VP9 sources by viewport width -->
             <source src="assets/videos/what/what-loop-1600.webm" type="video/webm" media="(min-width: 1400px)">
             <source src="assets/videos/what/what-loop-1200.webm" type="video/webm" media="(min-width: 900px)">
@@ -207,9 +206,9 @@
     <section id="contact" class="section" aria-labelledby="contact-title">
       <div class="container">
         <p class="eyebrow">Contact us</p>
-        <h2 id="contact-title" class="h2">Bring the Stage to Your Space</h2>
+        <h2 id="contact-title" class="h2">Bring Your Idea,<br>We’ll Bring the Music.</h2>
         <p class="lead contact-lead reveal">
-          Looking to offer something unique for your guests? Our live-band karaoke experience turns any venue into a night to remember. Contact us to book or explore partnership opportunities.
+          Private celebrations, corporate events, university parties—we’ve got you covered. Reach out to our team, and we’ll create a tailor-made live-band karaoke experience just for your event.
         </p>
         <div class="contact-cta">
           <a class="btn" href="mailto:contact@livekaraokeparis.com" aria-label="Contact Live Karaoke Paris by email">contact@livekaraokeparis.com</a>
